[gd_scene load_steps=22 format=3 uid="uid://cdmq4gbrbgyan"]

[ext_resource type="Script" uid="uid://cjk6q60hecnmx" path="res://boomerenemy.gd" id="1_27p4e"]
[ext_resource type="Texture2D" uid="uid://3f5qumiwjlmn" path="res://Sprites/BoomerDie1.png" id="2_27gxa"]
[ext_resource type="Texture2D" uid="uid://deqvxpakhsfit" path="res://Sprites/monster_sprites.png" id="2_e5486"]
[ext_resource type="AudioStream" uid="uid://qxfjnbqrobwf" path="res://monster_die.wav" id="3_xq6hr"]
[ext_resource type="Texture2D" uid="uid://bv3np4ayi5pns" path="res://Sprites/BoomerDie2.png" id="3_ynat5"]
[ext_resource type="Texture2D" uid="uid://bngm2m7ownf36" path="res://Sprites/BoomerDie3.png" id="4_8u2t5"]
[ext_resource type="Texture2D" uid="uid://ddbg1qyg37ge7" path="res://Sprites/Boomerdie4.png" id="5_rkinn"]
[ext_resource type="Texture2D" uid="uid://65cf0mi014vg" path="res://Sprites/Boomer.png" id="7_1b2qt"]
[ext_resource type="Texture2D" uid="uid://ba4gbsw3ev85g" path="res://Sprites/Boomer2.png" id="8_gj0mx"]
[ext_resource type="Texture2D" uid="uid://b3cjpkax7533t" path="res://Sprites/Boomer3.png" id="9_vbml2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_afoyd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pwi8k"]
atlas = ExtResource("2_e5486")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ousu"]
atlas = ExtResource("2_e5486")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_p34wv"]
atlas = ExtResource("2_e5486")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgili"]
atlas = ExtResource("2_e5486")
region = Rect2(768, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yttr0"]
atlas = ExtResource("2_e5486")
region = Rect2(1024, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsx5k"]
atlas = ExtResource("2_e5486")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2q54g"]
atlas = ExtResource("2_e5486")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_j27hp"]
atlas = ExtResource("2_e5486")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_0st4m"]
atlas = ExtResource("2_e5486")
region = Rect2(768, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_u8br5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_27gxa")
}, {
"duration": 1.0,
"texture": ExtResource("3_ynat5")
}, {
"duration": 1.0,
"texture": ExtResource("4_8u2t5")
}, {
"duration": 1.0,
"texture": ExtResource("5_rkinn")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwi8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ousu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p34wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgili")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yttr0")
}],
"loop": false,
"name": &"death1",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_1b2qt")
}, {
"duration": 1.0,
"texture": ExtResource("8_gj0mx")
}, {
"duration": 1.0,
"texture": ExtResource("9_vbml2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsx5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2q54g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j27hp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0st4m")
}],
"loop": true,
"name": &"idle1",
"speed": 8.0
}]

[node name="Enemy" type="CharacterBody3D"]
transform = Transform3D(2.07393, 0, 0, 0, 1.0146, 0, 0, 0, 1, 0, 0, 0)
collision_layer = 2
script = ExtResource("1_27p4e")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_afoyd")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1.22078, 0, 0, 0, 1.9395, 0, 0, 0, 1.00142, 0, 1.09155, 0)
pixel_size = 0.009
billboard = 2
shaded = true
sprite_frames = SubResource("SpriteFrames_u8br5")
animation = &"death"
autoplay = "idle"

[node name="DeathSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_xq6hr")
volume_db = 2.3
unit_size = 2.0
pitch_scale = 0.7
bus = &"Sfx"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Despawn Timer" type="Timer" parent="."]
wait_time = 130.0
autostart = true

[connection signal="animation_finished" from="AnimatedSprite3D" to="." method="_on_animated_sprite_3d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Despawn Timer" to="." method="_on_despawn_timer_timeout"]
